# statis-sdk

./: LICENSE  README.md
.github/workflows/: ci.yml
adapters/: README.md
adapters/python/: __init__.py  airflow.py  base.py  github_actions.py  hubspot.py  linear.py  mcp_proxy.py  salesforce.py  slack.py  stripe_mock.py  zendesk.py
examples/: crewai_example.py  csm_demo.py  mcp_example.py  retention_demo.py  webhook_receiver.py
examples/crewai/: .gitignore  README.md  agents.py  crew.py  demo_memory_bridge.py  demo_multi_crew.py  demo_shadow_audit.py  demo_with_statis.py  demo_without_statis.py  provision.py  requirements.txt  statis_tools.py  tasks.py  webhook_crew_trigger.py
python/: pyproject.toml
python/src/statis/: __init__.py  _models.py  cli.py  cli_init.py  client.py
python/src/statis/integrations/: crewai.py  mcp.py
python/tests/: test_client.py
typescript/: package.json  tsconfig.json
typescript/src/: client.ts  index.ts  types.ts
typescript/src/tests/: client.test.ts
