[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statis-ai"
version = "0.1.0"
description = "Python SDK for Statis — agent execution infrastructure"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "respx>=0.20", "pytest-asyncio"]

[project.urls]
Homepage = "https://statis.dev"
Repository = "https://github.com/statis-ai/statis-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/statis"]
